src/test/ui/specialization/defaultimpl/validation.stderr
error: inherent impls cannot be `default`
  --> $DIR/validation.rs:7:14
   |
LL | default impl S {}
   | -------      ^ inherent impl for this type
   | |
   | `default` because of this
   |
   = note: only trait implementations may be annotated with `default`

error: impls of auto traits cannot be default
  --> $DIR/validation.rs:9:21
   |
LL | default unsafe impl Send for S {}
   | -------             ^^^^ auto trait
   | |
   | default because of this

error: impls of auto traits cannot be default
  --> $DIR/validation.rs:10:15
   |
LL | default impl !Send for Z {}
   | -------       ^^^^ auto trait
   | |
   | default because of this

error[E0750]: negative impls cannot be default impls
  --> $DIR/validation.rs:10:1
   |
LL | default impl !Send for Z {}
   | ^^^^^^^      ^

error[E0750]: negative impls cannot be default impls
  --> $DIR/validation.rs:14:1
   |
LL | default impl !Tr for S {}
   | ^^^^^^^      ^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0750`.
